--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -52,11 +52,11 @@ jobs:
           path: ${{ inputs.path }}  # Required
           disable_secrets_scan: ${{ inputs.disable_secrets_scan || 'false' }}  # Boolean option
           upload_results: ${{ inputs.upload_results || 'false' }}  # Boolean option
-          version: ${{ inputs.version }}  # Optional
-          config: ${{ inputs.config }}  # Optional
-          fail_on: ${{ inputs.fail_on }}  # Optional
+          version: ${{ inputs.version || '' }}  # Optional
+          config: ${{ inputs.config || '' }}  # Optional
+          fail_on: ${{ inputs.fail_on || '' }}  # Optional
           output_path: ${{ inputs.output_path || './' }}  # Optional
-          report_formats: ${{ inputs.report_formats }}  # Optional
+          report_formats: ${{ inputs.report_formats || '' }}  # Optional
         env:
           FALCON_CLIENT_SECRET: ${{ secrets.FALCON_CLIENT_SECRET }}
 
