fix: allow path and config to coexist
Makes path not required since you can use a config file that includes
path. This will actually make the most sense for someone to use in a
CI/CD pipeline. Updated tests and added a config to test this out.

--- a/.github/workflows/test-workflow-dispatch.yml
+++ b/.github/workflows/test-workflow-dispatch.yml
@@ -29,7 +29,7 @@ on:
         default: "./"
       path:
         description: 'Path to local file, local directory or git repo to scan (e.g. ./my-local-dir, git::<git repo>, sample-file.tf)'
-        required: true
+        required: false
       report_formats:
         description: 'Comma-separated list of formats in which reports are to be written (e.g. json,sarif)'
         required: false
