--- a/.github/workflows/test-on-push.yml
+++ b/.github/workflows/test-on-push.yml
@@ -15,21 +15,25 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Create scan results directory
+        run: mkdir scan-results
+
       - name: Test FCS CLI IaC Scan
         uses: ./
         with:
           falcon_client_id: ${{ vars.FALCON_CLIENT_ID }}
           falcon_region: ${{ vars.FALCON_CLOUD_REGION }}
           path: tests/
+          output_path: scan-results/
           report_formats: sarif
         env:
           FALCON_CLIENT_SECRET: ${{ secrets.FALCON_CLIENT_SECRET }}
 
       - name: Show scan results
         run: |
-          cat *-scan-results.sarif
+          cat scan-results/*.sarif
 
       - name: Upload sarif file
         uses: github/codeql-action/upload-sarif@v3
         with:
-          sarif_file: "./"
+          sarif_file: "./scan-results"
