--- a/action.yml
+++ b/action.yml
@@ -50,7 +50,7 @@ inputs:
     description: 'Include results for the specified platforms, accepts a comma-separated list (e.g Ansible,CloudFormation)'
     required: false
   policy_rule:
-    description: 'IaC cloud scanning policy-rule (FCS CLI v1.0.0+ only). Use "local" for local rules, "default-iac-alert-rule" for cloud-based rules'
+    description: 'IaC cloud scanning policy-rule. Use "local" for local rules, "default-iac-alert-rule" for cloud-based rules'
     required: false
     default: 'local'
   project_owners:
