--- a/.github/workflows/edge-case-tests.yml
+++ b/.github/workflows/edge-case-tests.yml
@@ -1,6 +1,8 @@
 name: Edge Case Tests
 on:
-  workflow_dispatch:
+  push:
+  pull_request_target:
+    types: [labeled]
   
 jobs:
   test-vulnerability-only:
