--- a/.github/workflows/edge-case-tests.yml
+++ b/.github/workflows/edge-case-tests.yml
@@ -24,7 +24,7 @@ jobs:
           report_formats: json,sarif
           minimum_score: 7.0
         env:
-          falcon_client_secret: ${{ secrets.FALCON_CLIENT_SECRET }}
+          FALCON_CLIENT_SECRET: ${{ secrets.FALCON_CLIENT_SECRET }}
       
       - name: Upload vulnerability results
         uses: actions/upload-artifact@v4
@@ -51,7 +51,7 @@ jobs:
           output_path: ./sbom-results/
           report_formats: sbom-cylconedx
         env:
-          falcon_client_secret: ${{ secrets.FALCON_CLIENT_SECRET }}
+          FALCON_CLIENT_SECRET: ${{ secrets.FALCON_CLIENT_SECRET }}
       
       - name: Upload SBOM results
         uses: actions/upload-artifact@v4
@@ -79,7 +79,7 @@ jobs:
           report_formats: json
           minimum_severity: low
         env:
-          falcon_client_secret: ${{ secrets.FALCON_CLIENT_SECRET }}
+          FALCON_CLIENT_SECRET: ${{ secrets.FALCON_CLIENT_SECRET }}
 
       
       - name: Upload scan results
